--- a/templates/kibana-svc.yaml
+++ b/templates/kibana-svc.yaml
@@ -2,6 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
+{{- if .Values.kibana.service.annotations }}
+  annotations:
+{{ toYaml .Values.kibana.service.annotations | indent 4 }}
+{{- end }}
   name: {{ template "fullname" . }}-kibana
   labels:
     app: {{ template "fullname" . }}
@@ -10,11 +14,25 @@ metadata:
     heritage: "{{ .Release.Service }}"
     component: {{ template "fullname" . }}-kibana
 spec:
-  type: {{ .Values.common.serviceType }}
+  type: {{ .Values.kibana.service.type }}
   ports:
-  - port: {{ .Values.kibana.httpPort }}
+  - port: {{ .Values.kibana.service.httpPort }}
     targetPort: 5601
     protocol: TCP
   selector:
     component: {{ template "fullname" . }}-kibana
+{{- if .Values.kibana.service.externalIPs }}
+  externalIPs:
+{{ toYaml .Values.kibana.service.externalIPs | indent 4 }}
+{{- end }}
+{{- if .Values.kibana.service.loadBalancerIP }}
+  loadBalancerIP: "{{ .Values.kibana.service.loadBalancerIP }}"
+{{- end }}
+{{- if .Values.kibana.service.loadBalancerSourceRanges }}
+  loadBalancerSourceRanges:
+{{ toYaml .Values.kibana.service.loadBalancerSourceRanges | indent 4 }}
+{{- end }}
+{{- end }}
+{{- if .Values.kibana.service.loadBalancerIP }}
+  loadBalancerIP: "{{ .Values.kibana.service.loadBalancerIP }}"
 {{- end }}
