--- a/values.yaml
+++ b/values.yaml
@@ -151,6 +151,20 @@ service:
   loadBalancerSourceRanges: []
   type: LoadBalancer
 
+ingress:
+  enabled: false
+  # Used to create an Ingress record.
+  hosts:
+    - elasticsearch-staging
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    #kubernetes.io/tls-acme: "true"
+  tls:
+    # Secrets must be manually created in the namespace.
+    # - secretName: kibana-tls
+    #   hosts:
+    #     - kibana.local
+
 kibana:
   enabled: true
   replicas: 1
@@ -181,13 +195,12 @@ kibana:
     enabled: false
     # Used to create an Ingress record.
     hosts:
-      # - kibana.local
+      - kibana-staging
     annotations:
-      # kubernetes.io/ingress.class: nginx
-      # kubernetes.io/tls-acme: "true"
+      kubernetes.io/ingress.class: nginx
+      #kubernetes.io/tls-acme: "true"
     tls:
       # Secrets must be manually created in the namespace.
       # - secretName: kibana-tls
       #   hosts:
       #     - kibana.local
-      
